@startuml claas diagram

class Point{
    -double x
    -double y

}

Shape o-- Point : Aggregation
note on link:  表示has-a的关系，有整体与局部的关系,并且没有了整体,局部也可单独存在
abstract class Shape{

}

Shape <|-- Circle
class Circle{

}

Shape<|--Triangle
class Triangle
{
}

Circle <|-- Smiley
class Smiley{

}

@enduml